[package]
name = "nbconvert"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.3.4"
serde_json = "1.0.61"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
